--- a/public/css/common.css
+++ b/public/css/common.css
@@ -78,7 +78,7 @@ button:hover {
     position: relative;
 }
 .container video {
-    z-index: 0;
+    z-index: 1;
     position: relative;
     width: 100%;
     height: 100%;
@@ -88,7 +88,7 @@ button:hover {
 }
 
 .video-off {
-    z-index: 1;
+    z-index: 2;
     position: absolute;
     visibility: hidden;
     top: 50%;
