--- a/public/css/viewer.css
+++ b/public/css/viewer.css
@@ -35,13 +35,18 @@
 }
 
 #messagesForm {
+    z-index: 0;
     display: grid;
     grid-gap: 1rem;
     grid-template-columns: auto;
 }
 
 .viewer select {
-    padding: 1rem;
+    padding: 10px;
+    height: 40px;
+    line-height: 40px;
+    font-size: 0.9rem;
+    color: var(--text-color);
     color: var(--text-color);
     background-color: var(--primary-color);
     cursor: pointer;
